# obstacle_extraction

./: CMakeLists.txt  package.xml
scripts/: collisiondetection.py  rostrajselector.py
src/: obstacle_extraction.cpp
